--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^5.0.1",
     "@clerk/themes": "^2.0.0",
+    "@mantine/core": "^7.9.1",
+    "@mantine/hooks": "^7.9.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
