--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mantine/hooks": "^7.9.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.373.0",
+    "mongoose": "^8.3.4",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
